WIP: change profile pic + skills

--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,20 +1,18 @@
 # some information about you
-name: "John Doe"
-nickname: "John"
+name: "Bao Le"
+nickname: "Mark"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Hi, I am"
-image: "images/author/john.png"
+image: "images/author/bao-le.jpg"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "johndoe@example.com"
-  phone: "+0123456789"
-  github: johndoe
+  email: "leducbao1992@gmail.com"
+  # phone: "+0123456789"
+  # github: johndoe
   linkedin: johndoe
 
 # some summary about what you do
 summary:
-  - I am a Developer
-  - I am a Devops
-  - I love servers
-  - I work on open-source projects
-  - I love to work with some fun projects
+  - I am a Data Scientist
+  - I love Math and Philosophy
+  - I love to work on projects that bring impact to others
