--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: https://hugo-toha.github.io
 
 languageCode: en-us
-title: "John's Blog"
+title: "Bao Le (Mark's) blog"
 
 # Use Hugo modules to add theme
 module:
@@ -23,9 +23,6 @@ languages:
   en:
     languageName: English
     weight: 1
-  bn:
-    languageName: বাংলা
-    weight: 3
 
 # Force a locale to be use, really useful to develop the application ! Should be commented in production, the "weight" should rocks.
 # DefaultContentLanguage: bn
@@ -63,10 +60,10 @@ params:
     inverted: /images/site/inverted-logo.png
     favicon: /images/site/favicon.png
 
-  # GitHub repo of your site
-  gitRepo: https://github.com/hugo-toha/hugo-toha.github.io
-  # Default branch of your Git repo
-  gitBranch: main
+  # # GitHub repo of your site
+  # gitRepo: https://github.com/hugo-toha/hugo-toha.github.io
+  # # Default branch of your Git repo
+  # gitBranch: main
 
   # Configure the number of section title visible in the top navbar
   topNavbar:
@@ -94,7 +91,7 @@ params:
 
     # Enable and configure blog posts
     blog:
-      enable: true
+      enable: false
       # Share post on different social media
       shareButtons:
         facebook: true
