--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -22,8 +22,8 @@ customMenus:
 
 # Specify OpenGraph Headers
 openGraph:
-  title: John's Blog
+  title: Mark's Blog
   type: website
-  description: Portfolio and personal blog of John Doe.
-  image: images/author/john.png
+  description: Portfolio and personal blog of Mark Le.
+  image: images/author/bao-le.jpg
   url: https://hugo-toha.github.io
