--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -21,13 +21,17 @@ skills:
   summary: "Using as the main visualisation tool to stakeholders."
   url: "https://powerbi.microsoft.com/en-us/"
 
-- name: Torch
+- name: NLP
   # logo: /images/sections/skills/cloud.png
-  summary: "Worked with most of the major clouds such as GCP, AWS, Azure etc."
+  summary: "Experienced in building NLP models for text classification, Named Entity Recognition using classical machine learning and deep learning models."
 
+- name: SQL
+  logo: /images/sections/skills/sql.png
+  summary: "Experienced in writing SQL queries for data analysis and data extraction. Optimizing SQL queries for performance and cost."
+  
 - name: Docker
   logo: /images/sections/skills/docker.svg
-  summary: "Write most of the programs as dockerized container. Experienced with multi-stage, multi-arch build process."
+  summary: "Write most of the programs as dockerized container. Experienced with multi-stage process."
   url: "https://www.docker.com/"
 
 - name: Git
