--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -11,7 +11,7 @@ section:
 designation: Data Scientist
 # your company information
 company:
-  name: Citigo JSC.
+  name: KIOTVIET TECHNOLOGY CORPORATION.
   url: "https://www.kiotviet.vn/"
 
 # your resume. this file path should be relative to you "static" directory
@@ -40,7 +40,7 @@ socialLinks:
 # For example, you can put link for your resume.
 resourceLinks:
 - title: "My Resume"
-  url: "files/resume.pdf"
+  url: "files/CV - Mark Le Duc Bao 20230331.pdf"
 
 # # Show your badges
 # # You can show your verifiable certificates from https://www.credly.com.
