--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -30,14 +30,17 @@ skills:
   summary: "Experienced in writing SQL queries for data analysis and data extraction. Optimizing SQL queries for performance and cost."
   
 - name: Causal Inference
-  summary: "Experienced in building causal inference models using observational data."
+  summary: "Knowledgeable in building causal inference models using observational data."
 
-- name: Docker
+- name: MLOps
   logo: /images/sections/skills/docker.svg
-  summary: "Write most of the programs as dockerized container. Experienced with multi-stage process."
+  summary: "Experienced in writing and deploying machine learning models to production using Docker, FastAPI and ONNX engine."
   url: "https://www.docker.com/"
 
 - name: Git
   logo: /images/sections/skills/git.png
   summary: "Experienced with git-based development. Mostly, use Github. Also, have experience in working with GitLab."
   url: "https://git-scm.com/"
+
+- name: Accounting/Finance
+  summary: "My previous profession. Knowledgeable in financial accounting, financial reporting, and financial analysis."
