--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -9,10 +9,10 @@ contactInfo:
   email: "leducbao1992@gmail.com"
   # phone: "+0123456789"
   # github: johndoe
-  linkedin: johndoe
+  linkedin: markleducbao
 
 # some summary about what you do
 summary:
-  - I am a Data Scientist
-  - I love Math and Philosophy
-  - I love to work on projects that bring impact to others
+  - "Cogito, ergo sum"
+
+  
